# ai_project_Michal_Czycza

./: .dockerignore  .gitignore  AIRFLOW_SETUP.md  DEPLOYMENT_HUGGINGFACE.md  DEPLOYMENT_RENDER.md  Dockerfile.huggingface  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  generate_error_analysis.py  pyproject.toml  render.yaml  requirements.txt
.github/: copilot-instructions.md
.viz/: stats.json
ai-project-movies/: .gitignore  LICENSE  README.md  requirements.txt
ai-project-movies/src/ai_project_movies/: __init__.py  __main__.py
app/: Dockerfile  __init__.py  main.py
conf/base/: catalog.yml  parameters.yml
dags/: kedro_dag.py
data/08_reporting/plots/: evaluation_summary.csv
data/model_input/: test.parquet  train.parquet  val.parquet
data/primary/: scaled_data.parquet
data/reporting/: automl_metrics.json  automl_results.csv  baseline_metrics.json  best_model.pkl  custom_metrics.json  final_test_metrics.json  model_comparison.json
docs/: airflow_report.md  correlation.csv  docker_report.md  eda_report.md  eda_summary.txt  missing.csv  model_evaluation_report.md  modeling_report.md  preprocessing_report.md  stats.csv  webapp_report.md
frontend/: Dockerfile  app.py
mlruns/0/: meta.yaml
mlruns/0/30da21fc17824da0bea9a75275121060/: meta.yaml
mlruns/0/46fd77fbad3d467a96244e8048e6fa8a/: meta.yaml
mlruns/0/e4b5a0028a734428ac3e5f1bda6f6309/: meta.yaml
mlruns/0/eaf0d58df0d24f359e10de9e1a9d7f2c/: meta.yaml
notebooks/: EDA_MichalCzycza.ipynb
src/ai_project_movies/: pipeline_registry.py  settings.py
tests/: test_api.py
(+71 files in other folders)
